# loxjpp

./: CMakeLists.txt  README.md
res/: ex2.lox  ex3.lox  fib.lox  fun.lox
src/: environment.cpp  environment.h  expr.h  expression.h  interpreter.cpp  interpreter.h  lox.cpp  lox.h  lox_callable.h  lox_class.cpp  lox_class.h  lox_function.cpp  lox_function.h  lox_instance.cpp  lox_instance.h  main.cpp  parser.cpp  parser.h  resolver.cpp  resolver.h  scanner.cpp  scanner.h  stmt.h
src/utils/: errors.hpp  object.h  tokens.hpp  tree_printer.hpp
tools/generate_ast/: CMakeLists.txt  main.cpp
